--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -12,9 +12,8 @@ if (accessToken && refreshToken) {
 ---
 
 <Layout title="Sign in" description="Login page for my board games app.">
-	<h1>Sign in</h1>
-	<p>New here? <a href="/register">Create an account</a></p>
-	<form action="/api/auth/signin" method="post">
+	<p>New here? <a href="/sign-up">Create an account</a></p>
+	<form action="/api/auth/login" method="post">
 		<label for="email" for="email">Email</label>
 		<input type="email" name="email" id="email" />
 		<label for="password">Password</label>
