--- a/src/pages/projects/games.astro
+++ b/src/pages/projects/games.astro
@@ -9,7 +9,7 @@ const description = 'Learning by doing.'
 ---
   <h1>Welcome {email}</h1>
   <p>We are happy to see you here</p>
-  <form action="/api/auth/signout">
+  <form action="/api/auth/sign-out">
     <button type="submit">Sign out</button>
   </form>
 */
