Finished styling login and account creation pages

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -17,7 +17,7 @@ if (buttonStyle == 'white') {
 	type={type}
 	value={value}
 	name={name}
-	class={`block mt-auto self-start rounded-[--border-radius] border-[2px] border-solid border-light-red px-[10px] py-[3px] text-center text-[length:--font-size-h4] font-bold leading-[--line-height-h4] no-underline min-w-24 ${classes}`}
+	class={`block mt-auto self-start rounded-[--border-radius] border-[2px] border-solid border-light-red px-[10px] py-[3px] text-center text-[length:--font-size-h4] font-bold leading-[--line-height-h4] no-underline min-w-24 group ${classes}`}
 >
 	<slot> Label Slot</slot>
 </button>
