--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -3,9 +3,10 @@
 const { href, label, buttonStyle = 'white' } = Astro.props
 let classes
 if (buttonStyle == 'white') {
-	classes = 'bg-white text-light-red hover:text-white '
+	classes =
+		'bg-white text-light-red hover:text-white hover:bg-gradient-to-t from-dark-red to-light-red '
 } else if (buttonStyle == 'red') {
-	classes = 'bg-light-red text-white '
+	classes = 'bg-light-red text-white hover:bg-gradient-to-t from-dark-red to-light-red '
 } else if (buttonStyle == 'feature') {
 	classes =
 		'bg-white text-light-red hover:text-white hover:bg-gradient-to-t from-dark-red to-light-red '
@@ -14,6 +15,6 @@ if (buttonStyle == 'white') {
 
 <a
 	href={href}
-	class={`mt-auto self-start rounded-[--border-radius] border-[2px] border-solid border-white px-[10px] py-[3px] text-center text-[length:--font-size-h4] font-bold leading-[--line-height-h4] no-underline hover:bg-opacity-0 min-w-24 ${classes}`}
+	class={`mt-auto self-start rounded-[--border-radius] border-[2px] border-solid border-white px-[10px] py-[3px] text-center text-[length:--font-size-h4] font-bold leading-[--line-height-h4] no-underline min-w-24 ${classes}`}
 	>{label}</a
 >
