--- a/src/pages/create-account.astro
+++ b/src/pages/create-account.astro
@@ -1,17 +1,66 @@
 ---
 import Layout from '../layouts/BaseLayout.astro'
+import Button from '../components/Button.astro'
+import { Icon } from 'astro-icon/components'
 ---
 
 <Layout title="Create Account" description="Registration page for my board games app.">
 	<p>Already have an account? <a href="/sign-in">Sign in</a></p>
-	<form action="/api/auth/create-account" method="post">
-		<label for="email">Email</label>
-		<input type="email" name="email" id="email" />
-		<label for="password">Password</label>
-		<input type="password" name="password" id="password" />
-		<button type="submit">Create Account</button>
+	<form class="space-y-4" action="/api/auth/create-account" method="post">
+		<div>
+			<label for="email">Email</label>
+			<input
+				type="email"
+				name="email"
+				id="email"
+				oninvalid="this.setCustomValidity('Please enter valid email')"
+				oninput="setCustomValidity('')"
+				required
+				class="block border-2 border-solid border-light-grey
+		px-2 py-1"
+			/>
+		</div>
+		<div>
+			<div class="flex w-56">
+				<label for="password">Password</label>
+				<button type="button" class="show-password ml-auto text-sm text-light-red"
+					>Show Password</button
+				>
+			</div>
+			<input
+				type="password"
+				name="password"
+				id="password"
+				required
+				oninvalid="this.setCustomValidity('Please enter a password')"
+				oninput="setCustomValidity('')"
+				autocomplete="new-password"
+				id="new-password"
+				class="password-input block border-2 border-solid border-light-grey
+		px-2 py-0.5 after:bg-light-pink"
+			/>
+		</div>
+		<Button type="submit">Create Account</Button>
 	</form>
-	<form action="/api/auth/sign-in" method="post">
-		<button value="github" name="provider" type="submit">Sign in with GitHub</button>
+
+	<form action="/api/auth/sign-in" method="post" class="mt-4">
+		<Button type="submit" value="github" name="provider">
+			<Icon
+				name="github"
+				class="hover: mb-0.5 mr-2 inline h-6 w-6 text-light-red group-hover:text-white"
+			/>Sign in with Github
+		</Button>
 	</form>
+	<script>
+		const show = document.querySelector('.show-password')
+		const passwordInput = document.querySelector('.password-input')
+		show.addEventListener('click', () => {
+			console.log('click')
+			if (passwordInput.getAttribute('type') === 'password') {
+				passwordInput.setAttribute('type', 'text')
+			} else {
+				passwordInput.setAttribute('type', 'password')
+			}
+		})
+	</script>
 </Layout>
