--- a/src/components/FeatureCard.astro
+++ b/src/components/FeatureCard.astro
@@ -7,6 +7,8 @@ const {
 	linkObj = { label: 'link', href: 'link', buttonStyle: 'white' },
 	icon = 'quill'
 } = Astro.props
+let rotate = icon == 'puzzle' ? 'pb-1' : ''
+console.log(rotate)
 ---
 
 <div
@@ -15,7 +17,7 @@ const {
 	<div class="card-header-wrapper mb-2 flex items-center">
 		<h2 class="mt-0 text-2xl text-white md:text-3xl">{heading}</h2>
 		<div class="icon-wrapper ml-auto text-white">
-			<Icon name={icon} class="ml-5 h-20 w-auto text-white" />
+			<Icon name={icon} class={`ml-5 h-20 w-auto text-white ${rotate}`} />
 		</div>
 	</div>
 	<slot name="links">
