--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -36,7 +36,7 @@ const pageDescription = description ?? frontmatter.description
 		<Header />
 		<main>
 			<div
-				class="mx-[max(var(--margin-width),18px)] min-h-[calc(100vh-var(--header-height))] max-w-[--content-width]"
+				class="mx-[max(var(--margin-width),var(--margin-min))] min-h-[calc(100vh-var(--header-height))] max-w-[--content-width]"
 			>
 				<Title title={title} pubDate={pubDate} />
 				<slot />
