--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -95,6 +95,12 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 		:global(div.blog ol li) {
 			list-style: decimal;
 		}
+		:global(div.blog li) {
+			list-style: circle;
+			margin-left: 1rem;
+			padding-left: 1rem;
+			font-size: calc(17rem / 16);
+		}
 		@-moz-document url-prefix() {
 			:global(div.blog > p:first-child:first-letter) {
 				padding-top: 8px;
@@ -102,6 +108,15 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 		}
 		:global(ol) {
 			padding-left: 1rem;
+		}
+		:global(blockquote) {
+			margin-left: 0;
+			padding-left: 40px;
+			border-left: solid 4px var(--seriesColourVar);
+			font-size: calc(17rem / 16);
+		}
+		:global(blockquote *) {
+			font-size: calc(17rem / 16);
 		}
 	</style>
 </Layout>
