First post of new series!! 'Today I learned...'

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -125,4 +125,9 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 	:global(blockquote *) {
 		font-size: calc(17rem / 16);
 	}
+	:global(code) {
+		background-color: #f1f1f1;
+		padding: 2px;
+		font-size: 1rem;
+	}
 </style>
