right-aligned pubDate, added manual ordering to series.

--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -26,7 +26,7 @@ const fullDate = date.getDate() + ' ' + months[date.getMonth()] + ' ' + date.get
 	</h1>
 	{
 		pubDate && (
-			<p class=" mb-4 ml-auto mr-[calc(var(--margin-min)-4px)] shrink-0 self-end text-white md:shrink">
+			<p class=" mb-4 ml-auto mr-5 shrink-0 self-end text-right text-white md:shrink lg:mr-[calc(var(--margin-min)-4px)]">
 				<span class=" font-bold text-white">Published:</span> {fullDate}
 			</p>
 		)
