--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const description = 'A description for my home page'
 ---
 
 <Layout title={title} description={description}>
-	<div class="wrapper flex pl-[10px]">
+	<div class="wrapper flex pl-[10px] md:-mx-3">
 		<p
 			class="focus m-0 self-center hyphens-auto pr-[25px] text-[calc(40rem/16)] leading-[calc(50rem/16)] sm:pr-0 sm:text-[calc(24rem/16)] sm:leading-[calc(34rem/16)] md:text-[calc(32rem/16)] md:leading-[calc(40rem/16)]"
 		>
