--- a/src/pages/sign-in.astro
+++ b/src/pages/sign-in.astro
@@ -50,6 +50,8 @@ if (accessToken && refreshToken) {
 			/>
 		</div>
 		<Button type="submit">Sign In</Button>
+	</form>
+	<form class="mt-4 space-y-4" action="/api/auth/sign-in" method="post">
 		<Button type="submit" value="github" name="provider">
 			<Icon
 				name="github"
