--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,24 +25,23 @@ const description = 'A description for my home page'
 	<h2 class="mb-2 mt-6 pl-[10px]">What's Here?</h2>
 	<Grid>
 		<FeatureCard heading="A Blog" linkObj={{ label: 'Read blog', href: '/blog' }} icon="quill">
-			<p class="mb-3">
-				I've been using this space to share and reflect on my own experiences, for example:
-				<ul class="my-3">
-					<li class="my-3">
-						<a href="/blog/series/spiritual experiences/1" class="my-3 underline"
-							>My Spiritual Experiences</a
-						>
-					</li><li class="my-3">
-						<a href="/blog/series/reading the bible/1" class="my-3 underline"
-							>My Experiences of Reading The Bible</a
-						>
-					</li>
-				</ul>
-				<p class="mt-3">
+			<div class="space-y-3">
+				<p>I've been using this space to share and reflect on my own&nbsp;experience.</p>
+				<p>
+					My latest series is about
+					<a href="/blog/series/today I learned..." class="underline"
+						>what I've been learning about the&nbsp;web</a
+					>.
+				</p>
+				<p>
+					I have also been writing about my experiences of Christianity, for example:
+					<a href="/blog/series/reading the bible" class="underline">Reading&nbsp;The&nbsp;Bible</a>
+				</p>
+				<p>
 					The posts are organised into series, and each series is intended to be read in order as
 					a&nbsp;series.
 				</p>
-			</p>
+			</div>
 		</FeatureCard>
 		<FeatureCard
 			heading="Web Experiments"
@@ -50,11 +49,23 @@ const description = 'A description for my home page'
 			,
 			icon="code"
 		>
-			<p>
-				I've also been learning web development for fun since early 2022, so this is an opportunity
-				for me to play around and try some things. I'm hoping to add different features over time
-				(e.g. an RSS feed so you can subscribe to updates if you're so&nbsp;inclined).
-			</p>
+			<div class="space-y-3">
+				<p>
+					I've been learning web development for fun since early 2022. This site is an opportunity
+					for me to play around and try some&nbsp;things.
+				</p>
+				<p>
+					For example, I've been learning various technologies including React and SQL by making a <a
+						href="/projects"
+						class="underline">board&nbsp;games&nbsp;app</a
+					>.
+				</p>
+				<p>
+					Also, check out <a href="https://livinggracedianella.org.au" class="underline"
+						>Living Grace Dianella's new website</a
+					>! It was built by me and some friends using Astro and&nbsp;Strapi.
+				</p>
+			</div>
 		</FeatureCard>
 	</Grid>
 </Layout>
